# bitmap_generator

./: CMakeLists.txt  README.md
src/: bitmap.cpp  bitmap.hpp  fractal.cpp  fractal.hpp  main.cpp  mandelbrot.cpp  mandelbrot.hpp  rgb.cpp  rgb.hpp  zoom.cpp  zoom.hpp
